--- a/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
+++ b/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
@@ -118,6 +118,7 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Controllers\PayPalRestApiControllerBase.cs" />
     <Compile Include="Controllers\PayPalControllerBase.cs" />
     <Compile Include="Controllers\PayPalPlusController.cs" />
     <Compile Include="Controllers\PayPalStandardController.cs" />
