--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1227,6 +1227,15 @@
     <Content Include="Scripts\jquery.serialScroll.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="Themes\NewAlpha\Content\bs4\js\bootstrap-colorpicker-globalinit.js" />
+    <Content Include="Themes\NewAlpha\Content\bs4\js\bootstrap-colorpicker.js" />
+    <Content Include="Themes\NewAlpha\Content\bs4\js\bootstrap-datetimepicker.js" />
+    <Content Include="Themes\NewAlpha\Content\css\font-awesome.css" />
+    <Content Include="Themes\NewAlpha\Content\css\font-awesome.min.css" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.svg" />
+    <Content Include="Themes\NewAlpha\Content\css\jquery.pnotify.default.css" />
+    <Content Include="Themes\NewAlpha\Content\css\jquery.pnotify.default.icons.css" />
+    <Content Include="Themes\NewAlpha\Content\css\smartstore.smartgallery.css" />
     <Content Include="Themes\NewAlpha\Content\bs4\js\bootstrap.js" />
     <Content Include="Themes\NewAlpha\Content\bs4\js\bootstrap.min.js" />
     <Content Include="Themes\NewAlpha\Content\images\ajax_loader_small.gif" />
@@ -1623,6 +1632,54 @@
     <Content Include="Themes\Mobile\Content\jquery.mobile.theme-1.3.2.min.css" />
     <Content Include="Themes\Mobile\Content\styles.css" />
     <Content Include="Themes\Mobile\preview.png" />
+    <Content Include="Themes\NewAlpha\Scripts\hammer.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.addeasing.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.ba-outside-events.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.ba-outside-events.min.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.backgroundpos.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.elevatezoom.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.menu-aim.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.mobile-events.min.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.pnotify.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.preload.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.requestAnimationFrame.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.scrollTo.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.sequence.custom.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.sequence.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.serialScroll.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.sortable.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.transit.js" />
+    <Content Include="Themes\NewAlpha\Scripts\jquery.validate.unobtrusive.custom.js" />
+    <Content Include="Themes\NewAlpha\Scripts\prettify.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.ajaxcart.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.common.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.product-detail.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.product-filter.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.product-list-scroller.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.reviews.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.shopbar.js" />
+    <Content Include="Themes\NewAlpha\Scripts\public.voting.js" />
+    <Content Include="Themes\NewAlpha\Scripts\select2.js" />
+    <Content Include="Themes\NewAlpha\Scripts\select2.min.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.column-equalizer.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.common.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.doAjax.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.eventbroker.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.globalize.adapter.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.hacks.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.instantsearch.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.jquery.utils.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.navbar.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.placeholder.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.scrollbutton.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.selectwrapper.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.shrinkmenu.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.smartgallery.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.system.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.throbber.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.thumbzoomer.js" />
+    <Content Include="Themes\NewAlpha\Scripts\tether.js" />
+    <Content Include="Themes\NewAlpha\Scripts\smartstore.viewport.js" />
     <Content Include="Views\Product\BackInStockSubscribePopup.Mobile.cshtml" />
     <Content Include="Views\Catalog\CategoryNavigation.Mobile.cshtml" />
     <Content Include="Views\Catalog\CategoryTemplate.ProductsInGridOrLines.Mobile.cshtml" />
@@ -1951,6 +2008,11 @@
     <Content Include="Themes\NewAlpha\Content\bs4\custom\_forms.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\custom\_accordion.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\custom\_colors.scss" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.eot" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.woff" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Themes\NewAlpha\Content\css\fonts\FontAwesome.otf" />
     <None Include="Themes\NewAlpha\Content\theme.scss">
       <Compile>True</Compile>
       <Minify>True</Minify>
@@ -2174,9 +2236,7 @@
     <Content Include="Themes\NewAlpha\Views\Widget\WidgetsByZone.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Scripts\select2\" />
     <Folder Include="Themes\NewAlpha\Content\bs4\scss\mixins\" />
-    <Folder Include="Themes\NewAlpha\Scripts\" />
     <Folder Include="Views\TaskScheduler\" />
   </ItemGroup>
   <ItemGroup>
