--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1246,7 +1246,7 @@
     <Content Include="Themes\NewAlpha\Content\images\star-off.png" />
     <Content Include="Themes\NewAlpha\Content\images\star-on-12.png" />
     <Content Include="Themes\NewAlpha\Content\images\star-on.png" />
-    <Content Include="Themes\NewAlpha\Content\output\theme.css" />
+    <Content Include="Themes\NewAlpha\Content\compiled\theme.css" />
     <Content Include="Themes\NewAlpha\preview.png" />
     <Content Include="Themes\AlphaBlack\preview.png" />
     <Content Include="Themes\AlphaBlue\preview.png" />
@@ -2014,6 +2014,38 @@
     <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.woff2" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\FontAwesome.otf" />
     <Content Include="Themes\NewAlpha\Content\bs4\custom\_typo.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_alert.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_background-variant.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_border-radius.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_breakpoints.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_buttons.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_cards.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_center-block.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_clearfix.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_forms.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_gradients.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_grid-framework.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_grid.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_hover.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_image.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_label.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_list-group.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_lists.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_nav-divider.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_navbar-align.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_pagination.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_progress.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_pulls.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_reset-filter.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_reset-text.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_resize.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_screen-reader.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_size.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_tab-focus.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_table-row.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-emphasis.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-hide.scss" />
+    <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-truncate.scss" />
     <None Include="Themes\NewAlpha\Content\theme.scss">
       <Compile>True</Compile>
       <Minify>True</Minify>
@@ -2237,7 +2269,6 @@
     <Content Include="Themes\NewAlpha\Views\Widget\WidgetsByZone.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Themes\NewAlpha\Content\bs4\scss\mixins\" />
     <Folder Include="Views\TaskScheduler\" />
   </ItemGroup>
   <ItemGroup>
