--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1247,6 +1247,7 @@
     <Content Include="Themes\NewAlpha\Content\images\star-on-12.png" />
     <Content Include="Themes\NewAlpha\Content\images\star-on.png" />
     <Content Include="Themes\NewAlpha\Content\compiled\theme.css" />
+    <Content Include="Themes\NewAlpha\Content\shared\img\grippy.png" />
     <Content Include="Themes\NewAlpha\preview.png" />
     <Content Include="Themes\AlphaBlack\preview.png" />
     <Content Include="Themes\AlphaBlue\preview.png" />
@@ -2003,17 +2004,17 @@
     <Content Include="Themes\NewAlpha\Content\bs4\scss\_utilities-spacing.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\_utilities.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\_variables.scss" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_utils.scss" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_buttons.scss" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_forms.scss" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_accordion.scss" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_colors.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_utils.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_buttons.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_forms.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_accordion.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_colors.scss" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.eot" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.ttf" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.woff" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\fontawesome-webfont.woff2" />
     <Content Include="Themes\NewAlpha\Content\css\fonts\FontAwesome.otf" />
-    <Content Include="Themes\NewAlpha\Content\bs4\custom\_typo.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_typo.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_alert.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_background-variant.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_border-radius.scss" />
@@ -2046,6 +2047,13 @@
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-emphasis.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-hide.scss" />
     <Content Include="Themes\NewAlpha\Content\bs4\scss\mixins\_text-truncate.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_spacers.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_modal-flex.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_throbber.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_spinner.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_scrollbutton.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_star-rating.scss" />
+    <Content Include="Themes\NewAlpha\Content\shared\_sortable-grip.scss" />
     <None Include="Themes\NewAlpha\Content\theme.scss">
       <Compile>True</Compile>
       <Minify>True</Minify>
@@ -2139,7 +2147,6 @@
     <Content Include="Themes\NewAlpha\Views\Checkout\ShippingAddress.cshtml" />
     <Content Include="Themes\NewAlpha\Views\Checkout\ShippingMethod.cshtml" />
     <Content Include="Themes\NewAlpha\Views\Common\AccountDropdown.cshtml" />
-    <Content Include="Themes\NewAlpha\Views\Common\ChangeDeviceBlock.cshtml" />
     <Content Include="Themes\NewAlpha\Views\Common\CurrencySelector.cshtml" />
     <Content Include="Themes\NewAlpha\Views\Common\EntityPicker.cshtml" />
     <Content Include="Themes\NewAlpha\Views\Common\EntityPickerList.cshtml" />
