New theme: more css

--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
@@ -49,7 +49,7 @@
     
     <!-- Megamenu -->
     <Var name="DisplayNavbar" type="Boolean">true</Var>
-    <Var name="InverseNavbar" type="Boolean">false</Var>
+    <Var name="InverseNavbar" type="Boolean">true</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
     
