--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
@@ -45,7 +45,7 @@
     <Var name="ShopBarBorderColor" type="Color">#abc2d1</Var>
     <Var name="ShopBarTextColor" type="Color">#696969</Var>
     <Var name="ShopBarIconColor" type="Color">#d2d2d2</Var>
-    <Var name="ShopBarLabel" type="Select#ShopBarLabels">label-info</Var>
+    <Var name="ShopBarLabel" type="Select#ShopBarLabels">label-warning</Var>
     
     <!-- Megamenu -->
     <Var name="DisplayNavbar" type="Boolean">true</Var>
