--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/theme.config
@@ -10,7 +10,10 @@
     <Var name="BoxBackground" type="Color">#fff</Var>
     
     <!-- Common Font -->
-    <Var name="SansFontFamily" type="String">'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'</Var>
+    <Var name="GoogleFont1" type="String" isnew="1">Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic</Var>
+    <Var name="GoogleFont2" type="String" isnew="1"></Var>
+    <Var name="GoogleFont3" type="String" isnew="1"></Var>
+    <Var name="SansFontFamily" type="String">Helvetica, Arial, 'sans-serif'</Var>
     <Var name="SerifFontFamily" type="String">Georgia, 'Times New Roman', Times, serif</Var>
     <Var name="MonoFontFamily" type="String">Menlo, Monaco, Consolas, 'Courier New', monospace</Var>
     <Var name="BaseFontSize" type="String">14px</Var>
@@ -49,7 +52,7 @@
     
     <!-- Megamenu -->
     <Var name="DisplayNavbar" type="Boolean">true</Var>
-    <Var name="InverseNavbar" type="Boolean">true</Var>
+    <Var name="InverseNavbar" type="Boolean">false</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
     
