--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -384,6 +384,10 @@
     <Compile Include="Migrations\201603121451066_ThirdPartyEmailHandOver.Designer.cs">
       <DependentUpon>201603121451066_ThirdPartyEmailHandOver.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605020640016_GtinMpnIndex.cs" />
+    <Compile Include="Migrations\201605020640016_GtinMpnIndex.Designer.cs">
+      <DependentUpon>201605020640016_GtinMpnIndex.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -716,6 +720,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603121451066_ThirdPartyEmailHandOver.resx">
       <DependentUpon>201603121451066_ThirdPartyEmailHandOver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605020640016_GtinMpnIndex.resx">
+      <DependentUpon>201605020640016_GtinMpnIndex.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
