Resolves #477 Implement option to specify the number of exported and imported pictures

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -392,6 +392,10 @@
     <Compile Include="Migrations\201605061916117_SwapColumnMappingValues.Designer.cs">
       <DependentUpon>201605061916117_SwapColumnMappingValues.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605111140288_ImportExtraData.cs" />
+    <Compile Include="Migrations\201605111140288_ImportExtraData.Designer.cs">
+      <DependentUpon>201605111140288_ImportExtraData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -730,6 +734,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605061916117_SwapColumnMappingValues.resx">
       <DependentUpon>201605061916117_SwapColumnMappingValues.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605111140288_ImportExtraData.resx">
+      <DependentUpon>201605111140288_ImportExtraData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
