--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -205,19 +205,19 @@
     <Compile Include="DataExchange\Import\ImportResult.cs" />
     <Compile Include="DataExchange\Export\ExportProviderBase.cs" />
     <Compile Include="DataExchange\Export\DataExporter.cs" />
-    <Compile Include="DataExchange\Internal\DataExporterContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\DataExporterContext.cs" />
     <Compile Include="DataExchange\Export\DynamicEntityHelper.cs" />
-    <Compile Include="DataExchange\Internal\CategoryExportContext.cs" />
-    <Compile Include="DataExchange\Internal\CustomerExportContext.cs" />
-    <Compile Include="DataExchange\Internal\ManufacturerExportContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\CategoryExportContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\CustomerExportContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\ManufacturerExportContext.cs" />
     <Compile Include="DataExchange\Export\DataExportResult.cs" />
     <Compile Include="DataExchange\Export\ExportXmlHelper.cs" />
     <Compile Include="DataExchange\Export\IDataExporter.cs" />
-    <Compile Include="DataExchange\Internal\DynamicEntity.cs" />
+    <Compile Include="DataExchange\Export\Internal\DynamicEntity.cs" />
     <Compile Include="DataExchange\ISyncMappingService.cs" />
     <Compile Include="DataExchange\SyncMappingService.cs" />
-    <Compile Include="DataExchange\Internal\OrderExportContext.cs" />
-    <Compile Include="DataExchange\Internal\ProductExportContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\OrderExportContext.cs" />
+    <Compile Include="DataExchange\Export\Internal\ProductExportContext.cs" />
     <Compile Include="DataExchange\Export\ExportExecuteContext.cs" />
     <Compile Include="DataExchange\Export\ExportExtensions.cs" />
     <Compile Include="DataExchange\Export\ExportFeaturesAttribute.cs" />
