--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -396,6 +396,10 @@
     <Compile Include="Migrations\201605111140288_ImportExtraData.Designer.cs">
       <DependentUpon>201605111140288_ImportExtraData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605191216116_CheckoutAttributeMultiStore.cs" />
+    <Compile Include="Migrations\201605191216116_CheckoutAttributeMultiStore.Designer.cs">
+      <DependentUpon>201605191216116_CheckoutAttributeMultiStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -737,6 +741,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605111140288_ImportExtraData.resx">
       <DependentUpon>201605111140288_ImportExtraData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605191216116_CheckoutAttributeMultiStore.resx">
+      <DependentUpon>201605191216116_CheckoutAttributeMultiStore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
