--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -400,6 +400,10 @@
     <Compile Include="Migrations\201605191216116_CheckoutAttributeMultiStore.Designer.cs">
       <DependentUpon>201605191216116_CheckoutAttributeMultiStore.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605200907289_ExportRevision.cs" />
+    <Compile Include="Migrations\201605200907289_ExportRevision.Designer.cs">
+      <DependentUpon>201605200907289_ExportRevision.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -744,6 +748,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605191216116_CheckoutAttributeMultiStore.resx">
       <DependentUpon>201605191216116_CheckoutAttributeMultiStore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605200907289_ExportRevision.resx">
+      <DependentUpon>201605200907289_ExportRevision.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
