--- a/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
+++ b/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
@@ -102,6 +102,10 @@
       <HintPath>..\..\packages\MiniProfiler.EF6.3.0.11\lib\net40\MiniProfiler.EntityFramework6.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -157,6 +161,10 @@
     <Compile Include="Filters\Samples\SampleActionFilter.cs" />
     <Compile Include="DevToolsPlugin.cs" />
     <Compile Include="Models\BackendExtensionModel.cs" />
+    <Compile Include="OutputCache\ChildActionDataSerializer.cs" />
+    <Compile Include="OutputCache\DonutHoleProcessor.cs" />
+    <Compile Include="OutputCache\OutoutCacheItem.cs" />
+    <Compile Include="OutputCache\OutputCacheFilter.cs" />
     <Compile Include="ProfilerHttpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteProvider.cs" />
