--- a/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
+++ b/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
@@ -164,6 +164,7 @@
     <Compile Include="OutputCache\ChildActionDataSerializer.cs" />
     <Compile Include="OutputCache\DonutHoleFilter.cs" />
     <Compile Include="OutputCache\DonutHoleProcessor.cs" />
+    <Compile Include="OutputCache\OutputCacheControlPolicy.cs" />
     <Compile Include="OutputCache\OutputCacheItem.cs" />
     <Compile Include="OutputCache\OutputCacheFilter.cs" />
     <Compile Include="OutputCache\OutputCacheSettings.cs" />
