--- a/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
+++ b/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
@@ -162,7 +162,7 @@
     <Compile Include="DevToolsPlugin.cs" />
     <Compile Include="Models\BackendExtensionModel.cs" />
     <Compile Include="OutputCache\CacheHelpers.cs" />
-    <Compile Include="OutputCache\ChildActionDataSerializer.cs" />
+    <Compile Include="OutputCache\ChildActionData.cs" />
     <Compile Include="OutputCache\DonutHoleFilter.cs" />
     <Compile Include="OutputCache\DonutHoleProcessor.cs" />
     <Compile Include="OutputCache\OutputCacheControlPolicy.cs" />
