--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -144,8 +144,7 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="Async\AsyncState.cs" />
-    <Compile Include="Caching\DefaultCacheManager.cs" />
-    <Compile Include="Caching\AspNetCache.cs" />
+    <Compile Include="Caching\MemoryCacheManager.cs" />
     <Compile Include="Caching\DisplayedEntities.cs" />
     <Compile Include="Caching\IRequestCache.cs" />
     <Compile Include="Caching\IDisplayedEntities.cs" />
@@ -153,8 +152,6 @@
     <Compile Include="Caching\NullOutputCacheProvider.cs" />
     <Compile Include="Caching\OutputCacheItem.cs" />
     <Compile Include="Caching\RequestCache.cs" />
-    <Compile Include="Caching\StaticCache.cs" />
-    <Compile Include="Caching\ICache.cs" />
     <Compile Include="Collections\LazyMultimap.cs" />
     <Compile Include="Collections\Querystring.cs" />
     <Compile Include="Collections\TopologicalSorter.cs" />
