--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -404,6 +404,10 @@
     <Compile Include="Migrations\201605201911421_ExportRevision.Designer.cs">
       <DependentUpon>201605201911421_ExportRevision.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606241315549_AddressEnhancement.cs" />
+    <Compile Include="Migrations\201606241315549_AddressEnhancement.Designer.cs">
+      <DependentUpon>201606241315549_AddressEnhancement.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -751,6 +755,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605201911421_ExportRevision.resx">
       <DependentUpon>201605201911421_ExportRevision.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606241315549_AddressEnhancement.resx">
+      <DependentUpon>201606241315549_AddressEnhancement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
