--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -232,6 +232,9 @@
     <Compile Include="DataExchange\Export\IExportProfileService.cs" />
     <Compile Include="DataExchange\Import\ImportDataSegmenter.cs" />
     <Compile Include="DataExchange\Import\ImportRow.cs" />
+    <Compile Include="Events\DefaultMessageBus.cs" />
+    <Compile Include="Events\IMessageBroker.cs" />
+    <Compile Include="Events\IMessageBus.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
     <Compile Include="Hooks\StoreMappingEntityPostDeleteHook.cs" />
     <Compile Include="Media\MediaExtensions.cs" />
