--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -408,6 +408,10 @@
     <Compile Include="Migrations\201606241315549_AddressEnhancement.Designer.cs">
       <DependentUpon>201606241315549_AddressEnhancement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607111649138_FixExportDeploymentIsPublic.cs" />
+    <Compile Include="Migrations\201607111649138_FixExportDeploymentIsPublic.Designer.cs">
+      <DependentUpon>201607111649138_FixExportDeploymentIsPublic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -758,6 +762,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606241315549_AddressEnhancement.resx">
       <DependentUpon>201606241315549_AddressEnhancement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607111649138_FixExportDeploymentIsPublic.resx">
+      <DependentUpon>201607111649138_FixExportDeploymentIsPublic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
