--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Events\IMessageBus.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
     <Compile Include="Hooks\StoreMappingEntityPostDeleteHook.cs" />
+    <Compile Include="Media\IMediaStorageProvider.cs" />
     <Compile Include="Media\MediaExtensions.cs" />
     <Compile Include="Media\TransientMediaClearTask.cs" />
     <Compile Include="Messages\Importer\NewsLetterSubscriptionImporter.cs" />
@@ -352,7 +353,7 @@
     <Compile Include="Media\ImageCacheExtensions.cs" />
     <Compile Include="Media\ImageHeader.cs" />
     <Compile Include="Media\ImageResizerService.cs" />
-    <Compile Include="Media\ImageResizerUtils.cs" />
+    <Compile Include="Media\ImageResizerUtil.cs" />
     <Compile Include="Media\ImageTypes.cs" />
     <Compile Include="Messages\EventPublisherExtensions.cs" />
     <Compile Include="Messages\GenericMessageContext.cs" />
