--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -119,6 +119,22 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Caching2\CacheTransactionInterceptor.cs" />
+    <Compile Include="Caching2\CachingCommand.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Caching2\CachingCommandDefinition.cs" />
+    <Compile Include="Caching2\CachingDataReader.cs" />
+    <Compile Include="Caching2\CachingProviderServices.cs" />
+    <Compile Include="Caching2\ColumnMetadata.cs" />
+    <Compile Include="Caching2\CommandTreeFacts.cs" />
+    <Compile Include="Caching2\DbCache.cs" />
+    <Compile Include="Caching2\CachedDbResult.cs" />
+    <Compile Include="Caching2\IDbCache.cs" />
+    <Compile Include="Caching2\ObjectContextExtensions.cs" />
+    <Compile Include="Caching2\QueryableExtensions.cs" />
+    <Compile Include="Caching2\QueryRegistrar.cs" />
+    <Compile Include="Caching2\SingletonQueries.cs" />
     <Compile Include="Caching\EfCacheImpl.cs" />
     <Compile Include="Caching\EfCachingPolicy.cs" />
     <Compile Include="Mapping\DataExchange\ImportProfileMap.cs" />
