--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -237,7 +237,9 @@
     <Compile Include="Events\IMessageBus.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
     <Compile Include="Hooks\StoreMappingEntityPostDeleteHook.cs" />
-    <Compile Include="Media\IMediaStorageProvider.cs" />
+    <Compile Include="Media\Storage\DatabaseMediaStorageProvider.cs" />
+    <Compile Include="Media\Storage\FileSystemMediaStorageProvider.cs" />
+    <Compile Include="Media\Storage\IMediaStorageProvider.cs" />
     <Compile Include="Media\MediaExtensions.cs" />
     <Compile Include="Media\TransientMediaClearTask.cs" />
     <Compile Include="Messages\Importer\NewsLetterSubscriptionImporter.cs" />
